# braiscola-rs

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  wiki-sync.yml
briscola_ai/: Cargo.toml
briscola_ai/src/: determinize.rs  lib.rs  mc.rs  rng.rs  rollout.rs
briscola_core/: Cargo.toml
briscola_core/src/: bitset.rs  card.rs  lib.rs  rules.rs  state.rs
cli/: Cargo.toml
cli/src/: advisor.rs  card_art.rs  lib.rs  main.rs  play.rs
examples/advisor/: README.md  endgame_turn_n.json  lead_turn_n.json  respond_turn_n.json
plan/: BRISCOLA.md
res/napoletane/: README.md
scripts/: README.md  example_advisor_interactive.sh  example_advisor_suggest.sh  example_move_eval.sh  example_play_tui.sh  example_simulate.sh  example_simulate_best_me.sh  export_wiki.sh  run_all_examples.sh
