[package]
name = "cli"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
briscola_core = { path = "../briscola_core" }
briscola_ai = { path = "../briscola_ai" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
